[tool.poetry]
name = "bible-bot"
version = "0.1.0"
description = "Telegram bot for Bible reading"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^20.7"
telegraph = "^1.0.0"
Pillow = "^10.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 